--- a/substrate/frame/offences/benchmarking/Cargo.toml
+++ b/substrate/frame/offences/benchmarking/Cargo.toml
@@ -17,7 +17,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { workspace = true }
-frame = { workspace = true, features = ["experimental", "runtime"]}
+frame = { workspace = true, features = ["runtime"]}
 frame-election-provider-support = { workspace = true }
 log = { workspace = true }
 pallet-babe = { workspace = true }
@@ -53,6 +53,7 @@ std = [
 
 runtime-benchmarks = [
 	"frame-election-provider-support/runtime-benchmarks",
+	"frame/runtime-benchmarks",
 	"pallet-babe/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
 	"pallet-grandpa/runtime-benchmarks",
