--- a/substrate/frame/nomination-pools/test-delegate-stake/Cargo.toml
+++ b/substrate/frame/nomination-pools/test-delegate-stake/Cargo.toml
@@ -17,7 +17,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dev-dependencies]
 codec = { features = ["derive"], workspace = true, default-features = true }
-frame = { workspace = true, features = ["experimental", "runtime"]}
+=======
+frame = { workspace = true, features = ["runtime"] }
 scale-info = { features = ["derive"], workspace = true, default-features = true }
 
 
