--- a/substrate/frame/offences/Cargo.toml
+++ b/substrate/frame/offences/Cargo.toml
@@ -17,7 +17,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { features = ["derive"], workspace = true }
-frame = { workspace = true, features = ["experimental", "runtime"]}
+frame = { workspace = true, features = ["runtime"]}
 log = { workspace = true }
 pallet-balances = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
@@ -36,6 +36,7 @@ std = [
 ]
 runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
+	"frame/runtime-benchmarks"
 ]
 try-runtime = [
 	"pallet-balances/try-runtime",
