--- a/.github/workflows/cmd.yml
+++ b/.github/workflows/cmd.yml
@@ -417,6 +417,8 @@ jobs:
         if: startsWith(needs.get-pr-info.outputs.CMD, 'bench')
         shell: bash
         run: |
+          git fetch
+          git remote -v
           echo $(git log -n 2 --oneline)
 
           result=$(subweight compare commits \
@@ -426,7 +428,7 @@ jobs:
             --no-color \
             --change added changed \
             --ignore-errors \
-            origin/master $PR_BRANCH)
+            refs/remotes/origin/master $PR_BRANCH)
 
           # Save the multiline result to the output
           {
