--- a/polkadot/zombienet_tests/functional/0020-same-collation-to-all-assigned-cores.toml
+++ b/polkadot/zombienet_tests/functional/0020-same-collation-to-all-assigned-cores.toml
@@ -46,7 +46,7 @@ genesis_state_generator = "undying-collator export-genesis-state --pov-size=1000
   name = "malus-collator"
   image = "{{COL_IMAGE}}"
   command = "undying-collator"
-  args = ["-lparachain=debug", "--pov-size=100000", "--pvf-complexity=1", "--parachain-id=2000", "--malus"]
+  args = ["-lparachain=debug", "--pov-size=100000", "--pvf-complexity=1", "--parachain-id=2000", "--malus-type=duplicate-collations"]
 
 [types.Header]
 number = "u64"
