--- a/.github/workflows/tests-misc.yml
+++ b/.github/workflows/tests-misc.yml
@@ -3,7 +3,7 @@ name: tests misc
 on:
   push:
     branches:
-      - master
+      - stable2503
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
   merge_group:
@@ -127,7 +127,7 @@ jobs:
     timeout-minutes: 60
     strategy:
       matrix:
-        branch: [master, current]
+        branch: [stable2503, current]
     runs-on: ${{ needs.preflight.outputs.RUNNER }}
     container:
       image: ${{ needs.preflight.outputs.IMAGE }}
@@ -135,9 +135,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          # if branch is master, use the branch, otherwise set empty string, so it uses the current context
+          # if branch is stable2503, use the branch, otherwise set empty string, so it uses the current context
           # either PR (including forks) or merge group (main repo)
-          ref: ${{ matrix.branch == 'master' && matrix.branch || '' }}
+          ref: ${{ matrix.branch == 'stable2503' && matrix.branch || '' }}
 
       - name: script
         run: |
@@ -166,12 +166,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Download artifact (master run)
+      - name: Download artifact (stable2503 run)
         uses: actions/download-artifact@v4.1.8
         continue-on-error: true
         with:
-          name: cargo-check-benches-master-${{ github.sha }}
-          path: ./artifacts/master
+          name: cargo-check-benches-stable2503-${{ github.sha }}
+          path: ./artifacts/stable2503
 
       - name: Download artifact (current run)
         uses: actions/download-artifact@v4.1.8
@@ -183,22 +183,22 @@ jobs:
       - name: script
         id: compare
         run: |
-          if [ "${{ github.ref_name }}" = "master" ]; then
-            echo -e "Exiting on master branch"
+          if [ "${{ github.ref_name }}" = "stable2503" ]; then
+            echo -e "Exiting on stable2503 branch"
             exit 0
           fi
 
           # fail if no artifacts
-          if [ ! -d ./artifacts/master ] || [ ! -d ./artifacts/current ]; then
+          if [ ! -d ./artifacts/stable2503 ] || [ ! -d ./artifacts/current ]; then
             echo "No artifacts found"
             exit 1
           fi
 
           docker run --rm \
-          -v $PWD/artifacts/master:/artifacts/master \
+          -v $PWD/artifacts/stable2503:/artifacts/stable2503 \
           -v $PWD/artifacts/current:/artifacts/current \
           paritytech/node-bench-regression-guard:latest \
-          node-bench-regression-guard --reference /artifacts/master --compare-with /artifacts/current
+          node-bench-regression-guard --reference /artifacts/stable2503 --compare-with /artifacts/current
 
           if [ $? -ne 0 ]; then
             FAILED_MSG='### node-bench-regression-guard failed ❌, check the regression in *cargo-check-benches* job'
@@ -357,7 +357,7 @@ jobs:
           echo $RUST_VERSION
           echo "RUST_VERSION=${RUST_VERSION}" >> $GITHUB_ENV
       - name: Set up Homebrew
-        uses: Homebrew/actions/setup-homebrew@1ccc07ccd54b6048295516a3eb89b192c35057dc # master from 12.09.2024
+        uses: Homebrew/actions/setup-homebrew@1ccc07ccd54b6048295516a3eb89b192c35057dc # stable2503 from 12.09.2024
       - name: Install rust ${{ env.RUST_VERSION }}
         uses: actions-rust-lang/setup-rust-toolchain@9399c7bb15d4c7d47b27263d024f0a4978346ba4 # v1.11.0
         with:
